--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ dependencyResolutionManagement {
         mavenCentral()
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "GrabVenue"
